@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4214 2024/04/30 09:29:15 wiz Exp $
+# $NetBSD: Makefile,v 1.4215 2024/04/30 11:28:16 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -2433,7 +2433,6 @@ SUBDIR+=	py-babel
 SUBDIR+=	py-backcall
 SUBDIR+=	py-backports
 SUBDIR+=	py-backports.functools_lru_cache
-SUBDIR+=	py-backports.os
 SUBDIR+=	py-backports.shutil_get_terminal_size
 SUBDIR+=	py-backports.strenum
 SUBDIR+=	py-backports_abc
