@@ -1,2 +1,0 @@
-This package provides backports of new features in Python's os module under the
-backports namespace.
