@@ -1,9 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2019/12/13 09:40:06 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/backports/os.py
-${PYSITELIB}/backports/os.pyc
-${PYSITELIB}/backports/os.pyo
